--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             4.
         </h4>
         <img src="web/img/3ex.png" alt="ex 4">
+        <h5>
+            6.
+        </h5>
+        <img src="web/img/6ex.png" alt="ex 6">
     </div>
 </body>
 </html
