--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <h2>
             2.
         </h2>
-        <img src="web_second_semester/img/1ex.png" alt="ex 2">
+        <img src="img/1ex.png" alt="ex 2">
         <h3>
             3.
         </h3>
-        <img src="web_second_semester/img/2ex.png" alt="ex 3">
+        <img src="img/2ex.png" alt="ex 3">
         <h4>
             4.
         </h4>
-        <img src="web_second_semester/img/3ex.png" alt="ex 4">
+        <img src="img/3ex.png" alt="ex 4">
         <h5>
             6.
         </h5>
-        <img src="web_second_semester/img/6ex.png" alt="ex 6">
+        <img src="img/6ex.png" alt="ex 6">
     </div>
 </body>
 </html
