--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h5>
             6.
         </h5>
-        <img src="img/6ex.png" alt="ex 6">
+        <img src="img/ex6.png" alt="ex 6">
     </div>
 </body>
 </html
