--- a/web2/index.html
+++ b/web2/index.html
@@ -12,17 +12,37 @@
     </h1>
     <div class="photos">
         <h2>
-            2.
+            1.
         </h2>
-        <img src="./img/1ex.png" alt="ex 2">
+        <img src="./img/снимок 0.JPG" alt="ex 1">
         <h3>
-            3.
+            2.
         </h3>
-        <img src="./img/2ex.png" alt="ex 3">
+        <img src="./img/Снимок 1.JPG" alt="ex 2">
         <h4>
-            4.
+            3.
         </h4>
-        <img src="./img/3ex.png" alt="ex 4">
+        <img src="./img/Снимок 2.JPG" alt="ex 3">
+        <h5>
+            4.
+        </h5>
+        <img src="./img/Снимок 3.JPG" alt="ex 4">
+        <h6>
+            5.
+        </h6>
+        <img src="./img/Снимок 4.JPG" alt="ex 5">
+        <h7>
+            6.
+        </h7>
+        <img src="./img/Снимок 5.JPG" alt="ex 6">
+        <h8>
+            7.
+        </h8>
+        <img src="./img/Снимок 6.JPG" alt="ex 7">
+        <h9>
+            8.
+        </h9>
+        <img src="./img/Снимок 7.JPG" alt="ex 8">
     </div>
 </body>
 </html
