--- a/web2/index.html
+++ b/web2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="web2/style.css">
 </head>
 <body>
     <h1>
@@ -14,35 +14,35 @@
         <h2>
             1.
         </h2>
-        <img src="./img/снимок 0.JPG" alt="ex 1">
+        <img src="web2/img/снимок 0.JPG" alt="ex 1">
         <h3>
             2.
         </h3>
-        <img src="./img/Снимок 1.JPG" alt="ex 2">
+        <img src="web2/img/Снимок 1.JPG" alt="ex 2">
         <h4>
             3.
         </h4>
-        <img src="./img/Снимок 2.JPG" alt="ex 3">
+        <img src="web2/img/Снимок 2.JPG" alt="ex 3">
         <h5>
             4.
         </h5>
-        <img src="./img/Снимок 3.JPG" alt="ex 4">
+        <img src="web2/img/Снимок 3.JPG" alt="ex 4">
         <h6>
             5.
         </h6>
-        <img src="./img/Снимок 4.JPG" alt="ex 5">
+        <img src="web2/img/Снимок 4.JPG" alt="ex 5">
         <h7>
             6.
         </h7>
-        <img src="./img/Снимок 5.JPG" alt="ex 6">
+        <img src="web2/img/Снимок 5.JPG" alt="ex 6">
         <h8>
             7.
         </h8>
-        <img src="./img/Снимок 6.JPG" alt="ex 7">
+        <img src="web2/img/Снимок 6.JPG" alt="ex 7">
         <h9>
             8.
         </h9>
-        <img src="./img/Снимок 7.JPG" alt="ex 8">
+        <img src="web2/img/Снимок 7.JPG" alt="ex 8">
     </div>
 </body>
 </html
