--- a/web2/index.html
+++ b/web2/index.html
@@ -22,27 +22,27 @@
         <h4>
             3.
         </h4>
-        <img src="img2/img/Снимок 2.JPG" alt="ex 3">
+        <img src="img2/Снимок 2.JPG" alt="ex 3">
         <h5>
             4.
         </h5>
-        <img src="img2/img/Снимок 3.JPG" alt="ex 4">
+        <img src="img2/Снимок 3.JPG" alt="ex 4">
         <h6>
             5.
         </h6>
-        <img src="img2/img/Снимок 4.JPG" alt="ex 5">
+        <img src="img2/Снимок 4.JPG" alt="ex 5">
         <h7>
             6.
         </h7>
-        <img src="img2/img/Снимок 5.JPG" alt="ex 6">
+        <img src="img2/Снимок 5.JPG" alt="ex 6">
         <h8>
             7.
         </h8>
-        <img src="img2/img/Снимок 6.JPG" alt="ex 7">
+        <img src="img2/Снимок 6.JPG" alt="ex 7">
         <h9>
             8.
         </h9>
-        <img src="img2/img/Снимок 7.JPG" alt="ex 8">
+        <img src="img2/Снимок 7.JPG" alt="ex 8">
     </div>
 </body>
 </html
